<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_all_select"
        android:icon="@drawable/ic_check_white_24dp"
        android:title="@string/select_all"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_move"
        android:icon="@drawable/ic_content_cut_white_24dp"
        android:title="@string/move"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_trash"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_new_file"
        android:icon="@drawable/ic_folder_open_white_24dp"
        android:title="@string/new_file"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_create_far"
                    android:checked="true"
                    android:title="@string/sort_create_before"
                    app:showAsAction="ifRoom|collapseActionView"/>
                <item
                    android:id="@+id/menu_sort_create_close"
                    android:checked="false"
                    android:title="@string/sort_create_soon"
                    app:showAsAction="ifRoom|collapseActionView"/>
                <item
                    android:id="@+id/menu_sort_edit_far"
                    android:checked="false"
                    android:title="@string/sort_edit_before"
                    app:showAsAction="ifRoom|collapseActionView"/>
                <item
                    android:id="@+id/menu_sort_edit_close"
                    android:checked="false"
                    android:title="@string/sort_edit_soon"
                    app:showAsAction="ifRoom|collapseActionView"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_select"
        android:icon="@drawable/ic_assignment_turned_in_white_24dp"
        android:title="@string/select"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/menu_setting"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="collapseActionView"/>


</menu>