<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_album"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar_light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_album"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dip"
                android:layout_height="100dip"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_margin_big"
                android:layout_marginTop="@dimen/dimen_48dip"
                android:src="@drawable/ic_logo"/>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="223dip"
                android:layout_marginLeft="@dimen/dimen_24dip"
                android:layout_marginRight="@dimen/dimen_24dip"
                android:layout_marginTop="@dimen/dimen_36dip"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="3dip"
                card_view:cardElevation="5dip"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="223dip"
                    android:orientation="vertical">

                    <com.yydcdut.note.widget.MaterialRippleLayout
                        android:id="@+id/layout_ripple_update"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/setting_height"
                        app:mrl_rippleAlpha="0.2"
                        app:mrl_rippleColor="#585858"
                        app:mrl_rippleHover="true"
                        app:mrl_rippleOverlay="false">

                        <RelativeLayout
                            android:id="@+id/layout_update"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="12dip"
                            android:layout_marginRight="12dip"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="36dip"
                                android:layout_height="36dip"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_about_update"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:layout_marginLeft="@dimen/dimen_48dip"
                                android:gravity="center_vertical"
                                android:text="@string/about_update"
                                android:textColor="@color/black"/>

                            <ImageView
                                android:layout_width="24dip"
                                android:layout_height="24dip"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_chevron_right_black_24dp"/>

                        </RelativeLayout>
                    </com.yydcdut.note.widget.MaterialRippleLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@color/gray"/>

                    <com.yydcdut.note.widget.MaterialRippleLayout
                        android:id="@+id/layout_ripple_contact"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/setting_height"
                        app:mrl_rippleAlpha="0.2"
                        app:mrl_rippleColor="#585858"
                        app:mrl_rippleHover="true"
                        app:mrl_rippleOverlay="false">

                        <RelativeLayout
                            android:id="@+id/layout_contact"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="12dip"
                            android:layout_marginRight="12dip"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="36dip"
                                android:layout_height="36dip"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_about_contact"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:layout_marginLeft="@dimen/dimen_48dip"
                                android:gravity="center_vertical"
                                android:text="@string/about_contact"
                                android:textColor="@color/black"/>

                            <ImageView
                                android:layout_width="24dip"
                                android:layout_height="24dip"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_chevron_right_black_24dp"/>

                        </RelativeLayout>
                    </com.yydcdut.note.widget.MaterialRippleLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@color/gray"/>

                    <com.yydcdut.note.widget.MaterialRippleLayout
                        android:id="@+id/layout_ripple_share"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/setting_height"
                        app:mrl_rippleAlpha="0.2"
                        app:mrl_rippleColor="#585858"
                        app:mrl_rippleHover="true"
                        app:mrl_rippleOverlay="false">

                        <RelativeLayout
                            android:id="@+id/layout_share"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="12dip"
                            android:layout_marginRight="12dip"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="36dip"
                                android:layout_height="36dip"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_about_share"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:layout_marginLeft="@dimen/dimen_48dip"
                                android:gravity="center_vertical"
                                android:text="@string/about_share"
                                android:textColor="@color/black"/>


                            <ImageView
                                android:layout_width="24dip"
                                android:layout_height="24dip"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_chevron_right_black_24dp"/>

                        </RelativeLayout>
                    </com.yydcdut.note.widget.MaterialRippleLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@color/gray"/>

                    <com.yydcdut.note.widget.MaterialRippleLayout
                        android:id="@+id/layout_ripple_github"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/setting_height"
                        app:mrl_rippleAlpha="0.2"
                        app:mrl_rippleColor="#585858"
                        app:mrl_rippleHover="true"
                        app:mrl_rippleOverlay="false">

                        <RelativeLayout
                            android:id="@+id/layout_github"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="12dip"
                            android:layout_marginRight="12dip"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="36dip"
                                android:layout_height="36dip"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_about_github"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:layout_marginLeft="@dimen/dimen_48dip"
                                android:gravity="center_vertical"
                                android:text="@string/about_github"
                                android:textColor="@color/black"/>

                            <ImageView
                                android:layout_width="24dip"
                                android:layout_height="24dip"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_chevron_right_black_24dp"/>

                        </RelativeLayout>
                    </com.yydcdut.note.widget.MaterialRippleLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/txt_version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_36dip"
                android:gravity="center"
                android:text="V 1.1"
                android:textColor="@android:color/darker_gray"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>


